padding on mobile menu added + arrow png to svg + some style fixes

--- a/src/styles/blocks/menu-nav.scss
+++ b/src/styles/blocks/menu-nav.scss
@@ -1,7 +1,8 @@
 .menu-nav {
   background-color: $color-header;
   z-index: 2;
-  overflow-y: auto;
+  overflow: hidden;
+  padding-top: 25px;
 
   &__content {
     display: flex;
