--- a/src/styles/blocks/vision.scss
+++ b/src/styles/blocks/vision.scss
@@ -31,6 +31,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-size: 52px;
