--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,5 +1,5 @@
 $c-gray: #eee;
-$color-main-backgr: #e5e5e5;
+$color-main-backgr: #f2f6fa;
 $color-white: #fff;
 $color-blue: #144ed5;
 $color-header: #2c2c2c;
